# funbutton

./: .gitignore  CLAUDE.md  COMPETITIVE-LANDSCAPE.md  PRD.md  PRICING-RESEARCH.md  PROGRESS.md  QUALITY-MATCH-SPEC.md  README.md  RESEARCH.md  STACK-WARGAME.md  WISPR-LEARNING-LOOP-VERIFY.md  WORKER-SPEC.md
apps/desktop/: index.html  onboarding.html  package-lock.json  package.json  pill.html  vite.config.ts
apps/desktop/src/: App.css  App.tsx  onboarding.css  onboarding.tsx  pill.css  pill.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/scripts/: fetch-vendor-deps.sh
apps/desktop/src-tauri/src/: app_detect.rs  audio.rs  cleanup.rs  cloud.rs  embedded_llm.rs  fn_hotkey.rs  groq.rs  history.rs  hotkey.rs  inject.rs  lib.rs  main.rs  ollama.rs  pipeline.rs  state.rs
apps/web/: package-lock.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/checkout/: route.ts
apps/web/app/api/subscribe/: route.ts
apps/web/app/showdown/: data.json  page.tsx
apps/worker/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
apps/worker/migrations/: 0001_init.sql
apps/worker/scripts/: mint-test-license.ts  setup-dns.sh  tsconfig.json
apps/worker/src/: index.ts  types.ts
apps/worker/src/lib/: auth.ts  cost.ts  email.ts  jwt.ts  prompts.ts  providers.ts  rate-limit.ts  stripe.ts  usage-do.ts  words.ts
apps/worker/src/routes/: checkout.ts  cleanup.ts  license.ts  transcribe.ts  usage.ts  webhook.ts
scripts/: capture_showdown.sh  test_pipeline.sh
