[package]
name = "funbutton"
version = "0.1.0"
description = "FunButton.ai — local-first voice dictation"
authors = ["Todd Dickerson <todd@clickfunnels.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/todddickerson/funbutton"

[lib]
name = "funbutton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-store = "=2.4.3"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-notification = "=2.3.3"

# local-only history archive
rusqlite = { version = "=0.39.0", features = ["bundled"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.135"

# audio capture
cpal = "=0.17.3"
hound = "=3.5.1"

# global hotkey via raw event listening (Right Option support)
rdev = "=0.5.3"

# HTTP for Groq + Ollama
reqwest = { version = "=0.13.3", default-features = false, features = ["json", "multipart", "rustls", "http2", "charset"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }

# clipboard + paste injection
arboard = "=3.6.1"
enigo = "=0.6.1"

# misc
once_cell = "=1.21.3"
parking_lot = "=0.12.4"
anyhow = "=1.0.99"
log = "=0.4.29"
env_logger = "=0.11.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
